k8s/db-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server-deployment
  labels:
    app: db-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-server
  template:
    metadata:
      labels:
        app: db-server
    spec:
      imagePullSecrets:
        - name: ghcr
      serviceAccountName: db-server-service-account
      containers:
      - name: db-server
        image: "ghcr.io/hyperclaw79/db_server:latest"
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.25"
            memory: "256Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: db-server-service
spec:
  selector:
    app: db-server
  type: LoadBalancer
  ports:
    - name: external
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: internal
      protocol: TCP
      port: 5000
      targetPort: 5000
