k8s/redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-statefulset
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis-service
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis/redis-stack-server:latest
        imagePullPolicy: "Always"
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: redis-data
            mountPath: /var/lib/redis/
        resources:
          limits:
            cpu: "0.5"
            memory: "256Mi"
          requests:
            cpu: "0.25"
            memory: "128Mi"
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - name: internal
      protocol: TCP
      port: 6379
      targetPort: 6379
